New search implementation